update: typo/formatting fixes

--- a/_posts/2020-01-24-new-year.markdown
+++ b/_posts/2020-01-24-new-year.markdown
@@ -22,4 +22,6 @@ permalink: /2019/
 
 不知道你这一年过的好不好，但我希望你过的不好，我希望你被打击，被挫败，被背叛，被伤害，用最大的敌意保护自己，用最大的善意拥抱生活。认清巅峰时的簇拥，也珍惜黄昏时的信徒。我希望你体会过山车般的生活，但保持波澜不惊的心态。愿你求古仁人之心，或异二者之为。愿你用出世的态度做人，入世的态度做事。
 
+&nbsp;
+
 Yuan
