--- a/_posts/2020-03-25-bye-wm.markdown
+++ b/_posts/2020-03-25-bye-wm.markdown
@@ -48,4 +48,6 @@ permalink: /on-wm-cs/
 
 **最后我想感谢帮助过我的中国教授们，感谢他们的指导和推荐信，也真心劝 wm 给系里打点钱，留住这些教授们，别整天想着搞什么 diversity/leadership/feminism 这种政治正确，把钱花在 ROI 高一点的地方，至少不会两年 usnews 从32下滑到40。**
 
+&nbsp;
+
 原地址：https://www.zhihu.com/question/24305453/answer/1103830520
