--- a/_posts/2023-07-02-h1b-gc-china.md
+++ b/_posts/2023-07-02-h1b-gc-china.md
@@ -3,7 +3,7 @@ layout: post
 title:  "I-140 被批准后如何回国和归海"
 permalink: /h1b-gc-china/
 description: 等排期的时候能不能回国工作？
-tags: life others zh
+tags: life china zh
 ---
 
 在网上陆陆续续看到了一些讲解，总感觉比较零碎。在此整理一些关于**等绿卡排期期间如何长期回国再返美**的 FAQ，本文仅适用于以下前提：
